test: first tests working